--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  sqflite: 1.1.8
+  sqflite: ^1.2.0
+  fluro: "^1.5.1"
+  dio: 3.0.8
+  fluttertoast: ^3.1.3
+  bloc: 3.0.0
+  flutter_bloc: 3.2.0
+  equatable: 1.0.3
+  shared_preferences: 0.5.6+1
+  path_provider: 1.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -70,3 +78,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/images/
+    - assets/json/
