--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   sqflite: ^1.2.0
   fluro: "^1.5.1"
   dio: 3.0.8
-  fluttertoast: ^3.1.3
+  fluttertoast: 3.1.3
   bloc: 3.0.0
   flutter_bloc: 3.2.0
   equatable: 1.0.3
