--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   equatable: 1.0.3
   shared_preferences: 0.5.6+1
   path_provider: 1.6.0
+  firebase_analytics: 5.0.11
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
