--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   shared_preferences: 0.5.6+1
   path_provider: 1.6.0
   firebase_analytics: 5.0.11
-
+  month_picker_dialog: 0.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
