--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   path_provider: 1.6.0
   firebase_analytics: 5.0.11
   month_picker_dialog: 0.3.1
+  charts_flutter: 0.9.0
+  date_util: 0.1.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
