--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ dependencies:
   flutter_bloc: 3.2.0
   equatable: 1.0.3
   shared_preferences: 0.5.6+1
-  path_provider: 1.6.0
+  path_provider: 1.6.5
   firebase_analytics: 5.0.11
   month_picker_dialog: 0.3.1
   charts_flutter: 0.9.0
   date_util: 0.1.4
+  csv: 4.0.3
+  url_launcher: 5.4.2
+  flutter_email_sender: 3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
