--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   sqflite: ^1.2.0
-  fluro: "^1.5.1"
+  fluro: ^1.5.1
   dio: 3.0.8
   fluttertoast: 3.1.3
   bloc: 3.0.0
